was header styles add

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="./index.html" class="header-logo">Web<span class="header-logo-span">Studio</span></a>
             <ul class="header-menu-list">
                 <li>
-                    <a href="./index.html" class="nav-link">Studio</a>
+                    <a href="./index.html" class="nav-link special">Studio</a>
                 </li>
 
                 <li>
