--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <h2 class="visually-hidden">Second section</h2>
             <ul class="strategy">
                 <li class="first-list">
+                    <div></div>
                     <h3 class="strategy-headings">Strategy</h3>
                     <p class="strategy-description">
                         Our goal is to identify the business problem to walk away with the
@@ -79,6 +80,7 @@
                 </li>
 
                 <li class="first-list">
+                    <div></div>
                     <h3 class="strategy-headings">Punctuality</h3>
                     <p class="strategy-description">
                         Bring the key message to the brand's audience for the best price
@@ -87,6 +89,7 @@
                 </li>
 
                 <li class="first-list">
+                    <div></div>
                     <h3 class="strategy-headings">Diligence</h3>
                     <p class="strategy-description">
                         Research and confirm brands with the strongest digital growth
@@ -95,6 +98,7 @@
                 </li>
 
                 <li class="first-list">
+                    <div></div>
                     <h3 class="strategy-headings">Technologies</h3>
                     <p class="strategy-description">
                         Design practice focused on digital experiences. We bring forth a
@@ -208,11 +212,14 @@
 
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="footer-logo">Web<span class="footer-logo-span">Studio</span></a>
-            <p class="footer-text">
+            <div>
+                <a href="./index.html" class="footer-logo">Web<span class="footer-logo-span">Studio</span></a>
+                <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital
                 marketing & growth solutions.
-            </p>
+                </p>
+            </div>
+            <div></div>
         </div>
     </footer>
 </body>
