--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
             <h2 class="visually-hidden">Second section</h2>
             <ul class="strategy">
                 <li class="first-list">
-                    <div></div>
+                    <div class="strategy-icon">
+                        <svg class="" width="64" height="64">
+                            <use href="./images/icons.svg#icon-antenna"></use>
+                    </div>
                     <h3 class="strategy-headings">Strategy</h3>
                     <p class="strategy-description">
                         Our goal is to identify the business problem to walk away with the
@@ -80,7 +83,10 @@
                 </li>
 
                 <li class="first-list">
-                    <div></div>
+                    <div class="strategy-icon">
+                        <svg class="" width="64" height="64">
+                            <use href="./images/icons.svg#icon-clock"></use>
+                    </div>
                     <h3 class="strategy-headings">Punctuality</h3>
                     <p class="strategy-description">
                         Bring the key message to the brand's audience for the best price
@@ -89,7 +95,10 @@
                 </li>
 
                 <li class="first-list">
-                    <div></div>
+                    <div class="strategy-icon">
+                        <svg class="" width="64" height="64">
+                            <use href="./images/icons.svg#icon-diagram"></use>
+                    </div>
                     <h3 class="strategy-headings">Diligence</h3>
                     <p class="strategy-description">
                         Research and confirm brands with the strongest digital growth
@@ -98,7 +107,10 @@
                 </li>
 
                 <li class="first-list">
-                    <div></div>
+                    <div class="strategy-icon">
+                        <svg class="" width="64" height="64">
+                            <use href="./images/icons.svg#icon-astronaut"></use>
+                    </div>
                     <h3 class="strategy-headings">Technologies</h3>
                     <p class="strategy-description">
                         Design practice focused on digital experiences. We bring forth a
