--- a/index.html
+++ b/index.html
@@ -132,6 +132,38 @@
                     <div class="empl">
                     <h3 class="employee">Mark Guerrero</h3>
                     <p class="direction">Product Designer</p>
+                    <div class="link-icon">
+                        <ul class="icon-list">
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                                <svg class="tem-svg" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://x.com" target="_blank" rel="noopener noreferrer">
+                                <svg class="tem-svg" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                                <svg class="tem-svg" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                                <svg class="tem-svg" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                                </a>
+                            </li>
+                            </ul>
+                    </div>
                     </div>
                 </li>
 
@@ -140,6 +172,38 @@
                     <div class="empl">
                     <h3 class="employee">Tom Ford</h3>
                     <p class="direction">Frontend Developer</p>
+                    <div class="link-icon">
+                        <ul class="icon-list">
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://x.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     </div>
                 </li>
 
@@ -148,6 +212,38 @@
                     <div class="empl">
                     <h3 class="employee">Camila Garcia</h3>
                     <p class="direction">Marketing</p>
+                    <div class="link-icon">
+                        <ul class="icon-list">
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://x.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     </div>
                 </li>
 
@@ -156,6 +252,38 @@
                     <div class="empl">
                     <h3 class="employee">Daniel Wilson</h3>
                     <p class="direction">UI Designer</p>
+                    <div class="link-icon">
+                        <ul class="icon-list">
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://x.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="link-icon-list-item">
+                                <a class="link-item" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                                    <svg class="tem-svg" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     </div>
                 </li>
             </ul>
