was third section add

--- a/index.html
+++ b/index.html
@@ -289,8 +289,13 @@
             <h2 class="portfolio-header">Our Portfolio</h2>
 
             <ul class="portfolio-list">
+
                 <li class="portfolio-list-item">
-                    <img class="bankin-img" src="./images/bankingApp.jpg" alt="bankingApp" width="360" />
+                    <div class="animation-img">
+                        <img class="bankin-img" src="./images/bankingApp.jpg" alt="bankingApp" width="360" />
+                        <p class="portfolio-hidden-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    </div>
                     <div class="portfolio-list-item-text">
                         <h3 class="portfolio_title">Banking App</h3>
                         <p class="portfolio_paragraph">App</p>
@@ -298,7 +303,11 @@
                 </li>
 
                 <li class="portfolio-list-item">
-                    <img class="Cashless-img" src="./images/cashlessPayment.jpg" alt="Cashless Payment" width="360" />
+                    <div class="animation-img">
+                        <img class="Cashless-img" src="./images/cashlessPayment.jpg" alt="Cashless Payment" width="360" />
+                        <p class="portfolio-hidden-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    </div>
                     <div class="portfolio-list-item-text">
                         <h3 class="portfolio_title">Cashless Payment</h3>
                         <p class="portfolio_paragraph">Marketing</p>
@@ -306,7 +315,11 @@
                 </li>
 
                 <li class="portfolio-list-item">
-                    <img class="Meditation-img" src="./images/MeditationApp.jpg" alt="Meditation App" width="360" />
+                    <div class="animation-img">
+                        <img class="Meditation-img" src="./images/MeditationApp.jpg" alt="Meditation App" width="360" />
+                        <p class="portfolio-hidden-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App·</p>
+                    </div>
                     <div class="portfolio-list-item-text">
                         <h3 class="portfolio_title">Meditation App</h3>
                         <p class="portfolio_paragraph">App</p>
@@ -314,7 +327,11 @@
                 </li>
 
                 <li class="portfolio-list-item">
-                    <img class="Taxi-img" src="./images/TaxiService.jpg" alt="Taxi Service" width="360" />
+                    <div class="animation-img">
+                        <img class="Taxi-img" src="./images/TaxiService.jpg" alt="Taxi Service" width="360" />
+                        <p class="portfolio-hidden-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    </div>
                     <div class="portfolio-list-item-text">
                         <h3 class="portfolio_title">Taxi Service</h3>
                         <p class="portfolio_paragraph">Marketing</p>
@@ -322,7 +339,11 @@
                 </li>
 
                 <li class="portfolio-list-item">
-                    <img class="Illustrations-img" src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" />
+                    <div class="animation-img">
+                         <img class="Illustrations-img" src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" />
+                         <p class="portfolio-hidden-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                         Cloud Storage App</p>
+                    </div>
                     <div class="portfolio-list-item-text">
                         <h3 class="portfolio_title">Screen Illustrations</h3>
                         <p class="portfolio_paragraph">Design</p>
@@ -330,12 +351,17 @@
                 </li>
 
                 <li class="portfolio-list-item">
-                    <img class="Courses-img" src="./images/onlinecourses.jpg" alt="Online Courses" width="360" />
+                    <div class="animation-img">
+                        <img class="Courses-img" src="./images/onlinecourses.jpg" alt="Online Courses" width="360" />
+                        <p class="portfolio-hidden-text">114 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    </div>
                     <div class="portfolio-list-item-text">
                         <h3 class="portfolio_title">Online Courses</h3>
                         <p class="portfolio_paragraph">Marketing</p>
                     </div>
                 </li>
+
             </ul>
             </div>
         </section>
