--- a/index.html
+++ b/index.html
@@ -369,15 +369,47 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <div>
+        <div class="container container-footer">
+            <div class="footer-logo-container">
                 <a href="./index.html" class="footer-logo">Web<span class="footer-logo-span">Studio</span></a>
                 <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital
                 marketing & growth solutions.
                 </p>
             </div>
-            <div></div>
+            <div>
+                <p class="media-text">Social media</p>
+                <ul class="footer-list">
+                    <li class="footer-list-item">
+                        <a class="footer-link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                            <svg class="footer-icon-svg" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-link" href="https://x.com" target="_blank" rel="noopener noreferrer">
+                            <svg class="footer-icon-svg" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                            <svg class="footer-icon-svg" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-link" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                            <svg class="footer-icon-svg" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
