--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <div class="strategy-icon">
                         <svg class="" width="64" height="64">
                             <use href="./images/icons.svg#icon-antenna"></use>
+                        </svg>
                     </div>
                     <h3 class="strategy-headings">Strategy</h3>
                     <p class="strategy-description">
@@ -86,6 +87,7 @@
                     <div class="strategy-icon">
                         <svg class="" width="64" height="64">
                             <use href="./images/icons.svg#icon-clock"></use>
+                        </svg>
                     </div>
                     <h3 class="strategy-headings">Punctuality</h3>
                     <p class="strategy-description">
@@ -98,6 +100,7 @@
                     <div class="strategy-icon">
                         <svg class="" width="64" height="64">
                             <use href="./images/icons.svg#icon-diagram"></use>
+                        </svg>
                     </div>
                     <h3 class="strategy-headings">Diligence</h3>
                     <p class="strategy-description">
@@ -110,6 +113,7 @@
                     <div class="strategy-icon">
                         <svg class="" width="64" height="64">
                             <use href="./images/icons.svg#icon-astronaut"></use>
+                        </svg>
                     </div>
                     <h3 class="strategy-headings">Technologies</h3>
                     <p class="strategy-description">
